1.2.8 Apr 13th 2012
	- Fix: Close the database file without exceptions whether it is
	  open(STANDARD) or not(MEMORY_CACHE) in conjunction with the
	  CHECK_CACHE option. (Lorenzo Crosby)
1.2.7 Apr 10th 2012
        - Update timezones ( Boris Zentner )
	- Update FIPS codes 20120402 ( Boris Zentner )
1.2.6 Mar 28th 2012
        - Update country codes, FIPS codes and timezone ( Boris Zentner )
1.2.5 Aug 23th 2011
        - Fix small buffer issue when java tries to read over the EOF ( Boris Zentner )
        - Add support for new database types NETSPEED_EDITION_REV1_V6,
                NETSPEED_EDITION_REV1, ASNUM_EDITION_V6, CITY_EDITION_REV1_V6,
                ISP_EDITION_V6, ORG_EDITION_V6, DOMAIN_EDITION, DOMAIN_EDITION_V6 ( Boris Zentner )
        - Add new examples CityLookupTestV6 and ASNumLookupTestV6 ( Boris Zentner )
1.2.4 Aug 13th 2010
        - Update FIPS codes 20100810 ( Boris Zentner )
        - Simplify init code in class LookupServices ( Boris Zentner )
        - Big timezone update ( Boris Zentner )
        - Update FIPS codes 20100530 ( Boris Zentner )
        - Update FIPS codes 20100510 ( Boris Zentner )
        - Add IPv6 support via getCountryV6 ( Boris Zentner )
        - Add exmaple for IPv6 lookups: CountryLookupTestV6 ( Boris Zentner )
        - Fix DatabaseInfo string ( Boris Zentner ) 
        - Add netmask and last_netmask methods ( Boris Zentner )
        - Remove static keyword from objects that are reinitialized in the init() method. ( Tony Jacobs )
        - Replace nearly all calls to file.read() with file.readFully() ( Tony Jacobs )
        - Synchronized 100% of the calls to file ( Tony Jacobs )
        - Use Integer.valueOf() instead of new Integer() to reduce memory consumption. ( Tony Jacobs )
        - Use explicit imports instead of import java.io.*; and the like. ( Tony Jacobs )
        - Fix array length in distributed service setup ( quarz12h )
        - Sync with recent FIPS codes 20090723 ( Boris Zentner )