@@ -1,3 +1,4 @@
+        - Add new country South Sudan ( Boris Zentner )
 1.2.8 Apr 13th 2012
 	- Fix: Close the database file without exceptions whether it is
 	  open(STANDARD) or not(MEMORY_CACHE) in conjunction with the
